--- a/.github/workflows/branch_name_check.yaml
+++ b/.github/workflows/branch_name_check.yaml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const branchName = context.ref.replace("refs/heads/", "")
+          const branchName = context.ref_name
           if (branchName.match(/^[\w\d]+(\+[\w\d]+)*\/issue-\d+$/) === null) {
             console.error(`Branch name should follow pattern <author-names>/issue-<issue-number>, instead found ${branchName}`)
             process.exit(1)
@@ -31,7 +31,7 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const branchName = context.ref.replace("refs/heads/", "")
+          const branchName = context.ref_name
           const issue = Number(branch.split("/")[1].replace(/[^\d]/, ""))
           const {owner, repo} = context.issue
 
@@ -60,7 +60,7 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const branchName = context.ref.replace("refs/heads/", "")
+          const branchName = context.ref_name
 
           const authors = branch.split("/")[0].split("+")
           if ([...authors].sort().toString() != authors.toString()) {
