--- a/.github/workflows/branch_name_check.yaml
+++ b/.github/workflows/branch_name_check.yaml
@@ -19,40 +19,74 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          console.log(github)
-          console.log(context)
-          const branchName = context
-          if (branchName.match(/^[\w\d]+(\+[\w\d]+)*\/issue-\d+$/) === null) {
-            console.error(`Branch name should follow pattern <author-names>/issue-<issue-number>, instead found ${branchName}`)
+          const {owner, repo, number} = context.issue
+          const pullRequest = await github.rest.pulls.get({
+            owner, repo, pull_number: number
+          })
+
+          const branchName = pullRequest.data.head.ref
+          if (branchName.match(/^[\w\d]+(\+[\w\d]+)*\/issue-\d+(\-\d+)*$/) === null) {
+            console.error(
+              `Branch name should follow pattern "<author-names>/issue-<issue-number>", instead found ${branchName}`
+            )
             process.exit(1)
           }
       continue-on-error: false
 
-    - name: Verify issue number
+    - name: Verify issue numbers
       uses: actions/github-script@v7
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const branchName = context.ref_name
-          const issue = Number(branch.split("/")[1].replace(/[^\d]/, ""))
-          const {owner, repo} = context.issue
+          function isArraySorted(arr, comparator = undefined) {
+            return [...arr].sort(comparator).toString() == arr.toString()
+          }
 
-          try {
-            const response = await github.rest.issues.get({
-              owner: owner,
-              repo: repo,
-              issue_number: Number(issue)
-            })
+          const {owner, repo, number} = context.issue
+          const pullRequest = await github.rest.pulls.get({
+            owner, repo, pull_number: number
+          })
 
-            if (response.data.pull_request) {
-              console.error("Provided issue number is a pull request")
+          const branchName = pullRequest.data.head.ref
+          const branchIssueNumbers = branchName
+            .split("/")[1].slice("issue-".length)
+            .split("-")
+            .map(Number)
+
+          if (!isArraySorted(branchIssueNumbers, (a, b) => a - b)) {
+            console.error("Issue numbers in branch name aren't in ascending order")
+            process.exit(1)
+          }
+
+          const pullRequestMentionedIssues = pullRequest.data.body.match(/\-\s+#\d+\r\n/)
+            .map(item => item.slice(item.indexOf("#") + 1, -2))
+            .map(Number)
+
+          if (!isArraySorted(pullRequestMentionedIssues, (a, b) => a - b)) {
+            console.error("Issue numbers in PR description aren't in ascending order")
+            process.exit(1)
+          }
+
+          for (const branchIssueNumber of branchIssueNumbers) {
+            if (!pullRequestMentionedIssues.includes(branchIssueNumber)) {
+              console.error(`Pull request description should mention issue ${branchIssueNumber}`)
               process.exit(1)
             }
-          } catch (error) {
-            if (error.status === 404) {
-              console.error("Provided issue doesn't exist")
-              process.exit(1)
-            } else {
+
+            try {
+              const issue = await github.rest.issues.get({
+                owner, repo, issue_number: branchIssueNumber
+              })
+
+              if (issue.data.pull_request) {
+                console.error("Provided issue number is a pull request, must be a regular issue")
+                process.exit(1)
+              }
+            } catch (error) {
+              if (error.status === 404) {
+                console.error("Provided issue doesn't exist")
+                process.exit(1)
+              }
+
               throw error
             }
           }
@@ -60,18 +94,25 @@ jobs:
     - name: Assign authors to PR
       uses: actions/github-script@v7
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const branchName = context.ref_name
+          function isArraySorted(arr, comparator = undefined) {
+            return [...arr].sort(comparator).toString() == arr.toString()
+          }
 
-          const authors = branch.split("/")[0].split("+")
-          if ([...authors].sort().toString() != authors.toString()) {
+          const {owner, repo, number} = context.issue
+          const pullRequest = await github.rest.pulls.get({
+            owner, repo, pull_number: number
+          })
+
+          const branchName = pullRequest.data.head.ref
+          const authors = branchName.split("/")[0].split("+")
+          if (!isArraySorted(authors)) {
             console.error("Author usernames aren't in alphabetical order")
             process.exit(1)
           }
 
           console.log(`Assigning ${authors.join(", ")} to PR`)
-          const {owner, repo, number} = context.issue
+
           await github.rest.issues.addAssignees({
             owner, repo, issue_number: number, assignees: authors
           })
