--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,11 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+      - id: check-json
+      - id: pretty-format-json
+        args:
+        - --autofix
+        - --no-sort-keys
 
   - repo: https://github.com/psf/black
     rev: 25.1.0
