--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-json
       - id: pretty-format-json
+        exclude: .ipynb|.vscode
         args:
         - --autofix
         - --no-sort-keys
