--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "terminal.integrated.env.linux": {
+        "PYTHONPATH": "${workspaceFolder}/server:${env:PYTHONPATH}"
+    },
     "python.analysis.extraPaths": [
         "${workspaceFolder}/server"
     ],
