Fixed error when custom_node_ids is empty

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "${workspaceFolder}/server"
     ],
     "python.testing.pytestArgs": [
+        "-vv",
         "tests"
     ],
     "python.testing.unittestEnabled": false,
@@ -13,6 +14,8 @@
     "python.testing.cwd": "${workspaceFolder}/server",
     "cSpell.words": [
         "GTFS",
+        "iloc",
+        "iterrows",
         "overpy"
     ]
 }
