Moved tram stop mapping test cases to zip files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,11 @@
     "python.testing.pytestEnabled": true,
     "python.testing.cwd": "${workspaceFolder}/server",
     "cSpell.words": [
+        "compresslevel",
         "GTFS",
         "iloc",
         "iterrows",
-        "overpy"
+        "overpy",
+        "timespec"
     ]
 }
