Fixed incorrect printing of usernames

--- a/.github/workflows/branch_name_check.yaml
+++ b/.github/workflows/branch_name_check.yaml
@@ -50,9 +50,8 @@ jobs:
           const authors = branchName
             .split("/")[0]
             .split("+")
-            .map(item => item.toLowerCase())
 
-          if (!isArraySorted(authors)) {
+          if (!isArraySorted(authors.map(item => item.toLowerCase()))) {
             console.error("Author usernames aren't in alphabetical order")
             process.exit(1)
           }
