--- a/.github/workflows/python_tests.yaml
+++ b/.github/workflows/python_tests.yaml
@@ -1,9 +1,6 @@
-name: Server tests
+name: Python tests
 
-on:
-  push:
-    paths:
-      - server/**
+on: push
 
 jobs:
   pytest:
@@ -23,11 +20,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r server/requirements.txt
-        pip install -r server/dev-requirements.txt
+        pip install -r requirements.txt
+        pip install -r dev-requirements.txt
 
     - name: Run tests
-      working-directory: ${{github.workspace}}/server
-      env:
-        PYTHONPATH: ${{github.workspace}}/server
       run: pytest -vv tests
+      working-directory: ${{github.workspace}}
+      env:
+        PYTHONPATH: ${{github.workspace}}
