--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,12 @@
 {
-    "terminal.integrated.env.linux": {
-        "PYTHONPATH": "${workspaceFolder}/server:${env:PYTHONPATH}"
-    },
-    "python.analysis.extraPaths": [
-        "${workspaceFolder}/server"
-    ],
-    "python.testing.pytestArgs": [
-        "-vv",
-        "tests"
-    ],
+    "python.testing.pytestArgs": ["-vv", "tests"],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "python.testing.cwd": "${workspaceFolder}/server",
+    "python.testing.cwd": "${workspaceFolder}",
     "cSpell.words": [
         "compresslevel",
         "GTFS",
+        "headsign",
         "iloc",
         "iterrows",
         "overpy",
