Changes required before deployment (#45)
* Removed configs

* Adjustments for new way of storing city configuration files

* Added Dockerfile and docker-compose.yml

* Thank god for the tests

* Added Defining city configurations section to README

* Updated tests

* Renamed container

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.testing.cwd": "${workspaceFolder}",
+    "python.envFile": "",
     "cSpell.words": [
+        "caplog",
         "compresslevel",
         "GTFS",
         "headsign",
