--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,10 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.17.1
+    hooks:
+      - id: mypy
+        args: [--check-untyped-defs]
+        additional_dependencies: [types-requests, types-networkx, pytest-mypy-plugins, pydantic, fastapi, freezegun]
