--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "shapely>=2.0.7",
     "fastapi>=0.115.12",
     "uvicorn>=0.34.0",
+    "types-requests>=2.32.4",
+    "types-networkx>=3.5.0",
+    "pytest-mypy-plugins>=3.2.0",
 ]
 
 [project.optional-dependencies]
@@ -49,3 +52,7 @@ use_parentheses = true
 multi_line_output = 3
 include_trailing_comma = true
 force_alphabetical_sort_within_sections = true
+
+[tool.mypy]
+ignore_missing_imports = true
+strict = true
