--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ CITIES_DIRECTORY_PATH=/app/cities
 LOCAL_CITIES_DIRECTORY_PATH=./cities
 
 CITY_DATA_CACHE_DIRECTORY=/tmp/city_data_cache
+
+CITY_DATA_CACHE_MAX_FILE_COUNT=10
