--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,5 +33,8 @@ repos:
     rev: v1.17.1
     hooks:
       - id: mypy
+        entry: mypy .
         args: [--check-untyped-defs]
         additional_dependencies: [types-requests, types-networkx, pytest-mypy-plugins, pydantic, fastapi, freezegun]
+        always_run: true
+        pass_filenames: false
