--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,5 +62,6 @@ strict = true
 exclude_lines = [
     "pragma: no cover",
     "if __name__ == .__main__.:",
-    "if TYPE_CHECKING:"
+    "if TYPE_CHECKING:",
+    "with pytest.raises",
 ]
