tests: Added test coverage enforcement (#61)
* chore: Added test coverage check

* tests: Changed `city_cache_dir` fixture to not use test asset

* chore: Excluded skippable lines from test coverage

* feat: Excluded trips with less than 2 stops from data building process

* tests: Added more tests for TramStopMapper

* tests: Added tests for Node class

* tests: Added more tests for `server.py` file

* refactor: Moved `city_cache_directory` fixture to `TestCityDataCache`

* tests: Added test for missing file during cache store

* tests: Removed route and route text color from custom gtfs schedule

* tests: Extended test coverage for city data cache

* chore: Added coverage for branches

* tests: Skipped coverage for pytest.raises

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,3 +57,11 @@ force_alphabetical_sort_within_sections = true
 [tool.mypy]
 ignore_missing_imports = true
 strict = true
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "with pytest.raises",
+]
