--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pyproj>=3.7.1",
     "shapely>=2.0.7",
     "fastapi>=0.115.12",
+    "filelock>=3.17.0",
     "uvicorn>=0.34.0",
     "types-requests>=2.32.4",
     "types-networkx>=3.5.0",
